--- a/style.css
+++ b/style.css
@@ -26,11 +26,14 @@ div.video {
 }
 
 div.circle {
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   background-color: red;
   border-radius: 50%;
-  opacity: 0.5;
+  opacity: 1;
+  -webkit-animation: glow 1s ease-in-out infinite alternate;
+  -moz-animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 1s ease-in-out infinite alternate;
 }
 
 div.brand {
@@ -38,6 +41,7 @@ div.brand {
   flex-direction: row;
   color: #2a2a2a;
   justify-content: space-between;
+  align-items: center;
 }
 
 div.logo h2{
@@ -58,4 +62,13 @@ div.option {
 
 div.option label {
   font-style: italic;
+}
+
+@-webkit-keyframes glow {
+  from {
+    box-shadow: 0 0 0px #fff, 0 0 4px #fff, 0 0 6px #e60073, 0 0 8px #e60073, 0 0 10px #e60073, 0 0 15px #e60073, 0 0 20px #e60073;
+  }
+  to {
+    box-shadow: 0 0 0px #fff, 0 0 4px #ff4da6, 0 0 6px #ff4da6, 0 0 8px #ff4da6, 0 0 10px #ff4da6, 0 0 15px #ff4da6, 0 0 20px #ff4da6;
+  }
 }
